@@ -3,9 +3,6 @@
 ; This is the configuration file for the lwnetrouter system.
 ;
 
-;                                                                               
-; Be sure to set the multicast interface in '/var/cache/aoip/routing.db'!       
-;   
 [Global]
 InputQuantity=8
 OutputQuantity=8
@@ -14,6 +11,7 @@ CunctatorPort=3749
 CicIpAddress1=1.2.3.4
 CicPort=5001
 NetcuePort=/dev/ttyS0
+LivewireIpAddress=192.168.21.21
 AdapterIpAddress=192.168.21.11
 InputBusXfers=No
 OutputBusXfers=Yes
